--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! :)</title>
+  <title>E-card greeting</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="img/icon.png" />
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/hbd.mpeg">
+    <source src="./music/musicc.mpeg">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
