--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="six">
-      <img src="./img/blank.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/black.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd"></h3>
