--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
       <p class="idea-3">
     
       </p>
-      <p class="idea-4"></p>
-      <p class="idea-5">
-        </span>
-      </p>
+     
       <p class="idea-6">
         <span>S</span>
         <span>O</span>
@@ -60,7 +57,7 @@
 
     <div class="six">
       <img src="./img/black.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-      <img src="img/hat.svg" alt="hat" class="hat" />
+      <img src="img/favicon.png" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd"></h3>
         <h5 id="wishText"></h5>
