--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </p>
      
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>Here</span>
+        <span>We go</span>
       </p>
     </div>
 
