--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span id="name">Kak</span>
+        <span id="name">Kak Rindy</span>
       </h1>
       <p class="two" id="greetingText">Everyday is special</p>
     </div>
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-        Barakallah fii umrik^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
+        Barakallah fii umrik kak^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -46,11 +46,15 @@
       <p class="idea-1">This made for you</p>
       <p class="idea-2"></p>
       <p class="idea-3">
-       Here we go
       </p>
 
+      <p class="idea-6">
+        <span>This</span>
+        <span>is</span>
+      </p>
+    </div>
+    
     <div class="six">
-      
       <div class="wish">
         <h3 class="wish-hbd"></h3>
         <h5 id="wishText"></h5>
