--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>E-card greeting</title>
+  <title>Preferential</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/icon.png" />
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-        Barakallah fii umrik kak^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
+        Barakallah fii umrik kak🌻^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
         </p>
         <p class="fake-btn">Send</p>
       </div>
