--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-        Barakallah fii umrik kak🌻^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
+        Barakallah fii umrik kak^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
         </p>
         <p class="fake-btn">Send</p>
       </div>
