--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/musicc.mp3">
+    <source src="./music/musicone.mp3">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -24,7 +24,7 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span id="name">Kak Rindy </span>
+        <span id="name">Na i </span>
       </h1>
       <p class="two" id="greetingText">Everyday is special</p>
     </div>
@@ -36,7 +36,8 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-        Barakallah fii umrik kak^ Be happy! You're such a great person. All the best for you, may your wishes will come true and keep healthy. One more, don't forget to give me bouquet for sidang Tugas Akhir:D.
+        Barakallah fii umrik^ Be happy! You're such funniest person i know. All the best for you, may your wishes will come true and 
+          keep healthy. One more, harus rajin yaa
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -49,8 +50,8 @@
       </p>
 
       <p class="idea-6">
-        <span>This</span>
-        <span>is</span>
+        <span>Y</span>
+        <span>O</span>
       </p>
     </div>
     
@@ -130,7 +131,7 @@
     </div>
 
     <div class="nine">
-      <p>I hope you like it-from IQ 400</p>
+      <p>I hope you like it</p>
       <p id="replay">just refresh, if you want to watch it again.</p>
       <p class="last-smile">:)</p>
     </div>
