--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="text-box">
         <p class="hbd-chatbox">
         Barakallah fii umrik^ Be happy! You're such funniest person i know. All the best for you, may your wishes will come true and 
-          keep healthy. One more, harus rajin yaa
+          keep healthy. One more, harus rajin yaa.
         </p>
         <p class="fake-btn">Send</p>
       </div>
