--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="text-box">
         <p class="hbd-chatbox">
         Barakallah fii umrik^ Be happy! You're such funniest person i know. All the best for you, may your wishes will come true and 
-          keep healthy. One more, harus rajin yaa.
+          keep healthy. One more, must to be diligent okay.
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -101,12 +101,6 @@
     </div>
 
     <div class="eight">
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
