--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-        Barakallah fii umrik^ Be happy! You're such funniest person i know. All the best for you, may your wishes will come true and 
+        Barakallah fii umrik^ Be happy! 
+          You're such funniest person i know. All the best for you, may your wishes will come true and 
           keep healthy. One more, 
           must to be diligent okay.
         </p>
